# tamil-panchangam

./: .env.example  .gitignore  .replit  CLAUDE.md  README.md  design_guidelines.md  index.js  package-lock.json  package.json  package.json.broken  package.json.corrupted  pyproject.toml  render.yaml  replit.md  replit.nix  start.sh  vercel.json  vite.config.ts
attached_assets/: Pasted--AI-INTERPRETATION-ENGINE-v1-0-EXECUTING-DEBUG-Processi_1769731064843.txt  Pasted--PDF-CONTENT-REQUIREMENTS-NO-EXCEPTIONS--1769742027417_1769742027417.txt  Pasted--REPLIT-IMPLEMENTATION-PROMPT-Narrative-Unlock-Enforcem_1770100897354.txt  Pasted--REPLIT-IMPLEMENTATION-PROMPT-Tamil-Panchangam-Astrolog_1769729349527.txt  Pasted-AI-INTERPRETATION-ENGINE-GOVERNANCE-You-are-working-ins_1769200258718.txt  Pasted-AI-Interpretation-Engine-Prompt-v1-0-Locked-You-are-an-_1769198921168.txt  Pasted-Based-on-the-birth-details-you-provided-August-13-1972-_1770411284016.txt  Pasted-Create-a-Python-3-11-FastAPI-application-named-tamil-pa_1767404353719.txt  Pasted-PREDICTION-SIGNAL-EXPANSION-LOCKED-SCOPE-Context-This-i_1769159339239.txt  Pasted-PREDICTION-SIGNAL-EXPANSION-LOCKED-SCOPE-Context-This-i_1769191686787.txt  Pasted-PROMPT-Narrative-Unlock-Enforcement-v1-8-You-are-workin_1770101488491.txt  Pasted-PROMPT-Tamil-Panchangam-Astrology-Engine-Enforce-Interp_1769848175495.txt  Pasted-PROMPT-Tamil-Panchangam-Astrology-Engine-LLM-Prompt-Dep_1769844114406.txt  Pasted-Perfect-Yes-this-is-exactly-the-right-move-We-stop-debu_1769159255779.txt  (+20 more)
client/: index.html  vite.config.ts
debug_dump/: App.tsx  (+4 more)
(+268 files in other folders)
