[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.128.0",
    "jsonschema>=4.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "pyswisseph>=2.10.3.2",
    "pytz>=2025.2",
    "reportlab>=4.4.7",
    "svgwrite>=1.4.3",
    "timezonefinder>=8.2.0",
    "uvicorn>=0.40.0",
]
